# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

js_declaration("storagestatistics_js") {
  part_name = "storage_service"
  sources = [ "./@ohos.storageStatistics.d.ts" ]
}

ohos_shared_library("storagestatistics") {
  relative_install_dir = "module"
  subsystem_name = "filemanagement"
  part_name = "storage_service"

  defines = [
    "STORAGE_LOG_TAG = \"StorageManager\"",
    "LOG_DOMAIN = 0xD004300",
  ]

  include_dirs = [
    "include",
    "//foundation/filemanagement/storage_service/services/storage_manager/include",
    "//utils/system/safwk/native/include",
    "//utils/native/base/include",
    "//foundation/distributeddatamgr/distributedfile/interfaces/kits/js/src/",
    "//foundation/filemanagement/storage_service/interfaces/innerkits/storage_manager/native",
    "//foundation/filemanagement/storage_service/services/common/include",
  ]

  sources = [
    "//foundation/filemanagement/storage_service/services/storage_manager/kits_impl/src/storage_manager_connect.cpp",
    "//foundation/filemanagement/storage_service/services/storage_manager/kits_impl/src/storage_statistics_n_exporter.cpp",
    "//foundation/filemanagement/storage_service/services/storage_manager/kits_impl/src/storage_statistics_napi.cpp",
  ]

  deps = [
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/ace/napi:ace_napi",
    "//foundation/distributeddatamgr/distributedfile/interfaces/kits/js:fileio",
    "//foundation/distributeddatamgr/distributedfile/interfaces/kits/js:statfs",
    "//foundation/filemanagement/storage_service/interfaces/innerkits/storage_manager/native:storage_manager_sa_proxy",
    "//foundation/filemanagement/storage_service/services/storage_manager:storage_manager",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_runtime:ability_manager",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}

js_declaration("volumemanager_js") {
  part_name = "storage_service"
  sources = [ "./@ohos.volumeManager.d.ts" ]
}

ohos_shared_library("volumemanager") {
  relative_install_dir = "module"
  subsystem_name = "filemanagement"
  part_name = "storage_service"

  include_dirs = [
    "include",
    "//foundation/filemanagement/storage_service/services/storage_manager/include",
    "//utils/system/safwk/native/include",
    "//utils/native/base/include",
    "//foundation/distributeddatamgr/distributedfile/interfaces/kits/js/src/",
    "//foundation/filemanagement/storage_service/interfaces/innerkits/storage_manager/native",
    "//foundation/filemanagement/storage_service/services/common/include",
  ]

  sources = [
    "//foundation/filemanagement/storage_service/services/storage_manager/kits_impl/src/storage_manager_connect.cpp",
    "//foundation/filemanagement/storage_service/services/storage_manager/kits_impl/src/volumemanager_n_exporter.cpp",
    "//foundation/filemanagement/storage_service/services/storage_manager/kits_impl/src/volumemanager_napi.cpp",
  ]

  defines = [
    "STORAGE_LOG_TAG = \"StorageManager\"",
    "LOG_DOMAIN = 0xD004300",
  ]

  deps = [
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/ace/napi:ace_napi",
    "//foundation/distributeddatamgr/distributedfile/interfaces/kits/js:fileio",
    "//foundation/distributeddatamgr/distributedfile/interfaces/kits/js:statfs",
    "//foundation/filemanagement/storage_service/interfaces/innerkits/storage_manager/native:storage_manager_sa_proxy",
    "//foundation/filemanagement/storage_service/services/storage_manager:storage_manager",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_runtime:ability_manager",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}

group("storage_js") {
  deps = [
    ":storagestatistics",
    ":storagestatistics_js",
    ":volumemanager",
    ":volumemanager_js",
  ]
}
