# Copyright (C) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("//foundation/filemanagement/storage_service/storage_service_aafwk.gni")

module_output_path = "storage_service/crypto"

config("module_private_config") {
  visibility = [ ":*" ]
}

ohos_moduletest("CryptoSubTest") {
  module_out_path = module_output_path

  defines = [
    "STORAGE_LOG_TAG = \"StorageDaemon\"",
    "LOG_DOMAIN = 0xD004301",
    "USER_CRYPTO_MIGRATE_KEY",
  ]

  include_dirs = [
    "../../include",
    "../../include/crypto",
    "../../../common/include",
  ]

  sources = [ "crypto_key_test.cpp" ]

  if (storage_service_crypto_test) {
    defines += [ "CRYPTO_TEST" ]
  }

  configs = [ ":module_private_config" ]

  deps = [ "//third_party/googletest:gtest_main" ]
  deps += [
    "${storage_daemon_path}/libfscrypt:libfscryptutils",
    "../../crypto:libsdcrypto",
  ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "huks:libhukssdk",
  ]
}

group("crypto_test") {
  testonly = true
  deps = [ ":CryptoSubTest" ]
}
