# Copyright (c) 2021-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/filemanagement/storage_service/storage_service_aafwk.gni")

ROOT_DIR = "${storage_daemon_path}"

ohos_unittest("disk_manager_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  module_out_path = "storage_service/storage_service/storage_daemon"

  defines = [
    "STORAGE_LOG_TAG = \"StorageDaemon\"",
    "LOG_DOMAIN = 0xD004301",
    "private = public",
  ]

  include_dirs = [
    "$ROOT_DIR/include",
    "${storage_service_path}/utils/include",
    "${storage_manager_path}/include",
    "${storage_interface_path}/innerkits/storage_manager/native",
    "${storage_service_common_path}/include",
  ]

  sources = [
    "$ROOT_DIR/disk/src/disk_config.cpp",
    "$ROOT_DIR/disk/src/disk_info.cpp",
    "$ROOT_DIR/disk/src/disk_manager.cpp",
    "$ROOT_DIR/disk/test/disk_manager_test.cpp",
    "$ROOT_DIR/ipc/src/storage_manager_client.cpp",
    "$ROOT_DIR/netlink/src/netlink_data.cpp",
    "$ROOT_DIR/volume/src/external_volume_info.cpp",
    "$ROOT_DIR/volume/src/process.cpp",
    "$ROOT_DIR/volume/src/volume_info.cpp",
    "$ROOT_DIR/volume/src/volume_manager.cpp",
  ]

  deps = [
    "$ROOT_DIR:storage_common_utils",
    "${storage_daemon_path}:storage_daemon_header",
    "${storage_interface_path}/innerkits/storage_manager/native:storage_manager_header",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "storage_service:storage_manager_sa_proxy",
  ]
}

ohos_unittest("disk_info_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "${storage_service_path}/cfi_blocklist.txt"
  }
  module_out_path = "storage_service/storage_service/storage_daemon"

  defines = [
    "STORAGE_LOG_TAG = \"StorageDaemon\"",
    "LOG_DOMAIN = 0xD004301",
    "private=public",
  ]

  include_dirs = [
    "$ROOT_DIR/disk/test",
    "$ROOT_DIR/include",
    "${storage_daemon_path}/include/mock",
    "${storage_service_path}/utils/include",
    "${storage_manager_path}/include",
    "${storage_interface_path}/innerkits/storage_manager/native",
    "${storage_service_common_path}/include",
  ]

  sources = [
    "$ROOT_DIR/disk/src/disk_info.cpp",
    "$ROOT_DIR/disk/test/disk_info_test.cpp",
    "$ROOT_DIR/mock/disk_utils_mock.cpp",
    "$ROOT_DIR/mock/file_utils_mock.cpp",
    "$ROOT_DIR/mock/storage_manager_client_mock.cpp",
    "$ROOT_DIR/netlink/src/netlink_data.cpp",
    "$ROOT_DIR/volume/src/external_volume_info.cpp",
    "$ROOT_DIR/volume/src/process.cpp",
    "$ROOT_DIR/volume/src/volume_info.cpp",
    "$ROOT_DIR/volume/src/volume_manager.cpp",
  ]

  deps = [
    "$ROOT_DIR:storage_common_utils",
    "$ROOT_DIR:storage_daemon_header",
    "${storage_interface_path}/innerkits/storage_manager/native:storage_manager_header",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "storage_service:storage_manager_sa_proxy",
  ]
}

ohos_unittest("disk_info_sup_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "${storage_service_path}/cfi_blocklist.txt"
  }
  module_out_path = "storage_service/storage_service/storage_daemon"

  defines = [
    "STORAGE_LOG_TAG = \"StorageDaemon\"",
    "LOG_DOMAIN = 0xD004301",
    "private=public",
  ]

  include_dirs = [
    "$ROOT_DIR/include",
    "${storage_service_path}/utils/include",
    "${storage_manager_path}/include",
    "${storage_interface_path}/innerkits/storage_manager/native",
    "${storage_service_common_path}/include",
  ]

  sources = [
    "$ROOT_DIR/disk/src/disk_info.cpp",
    "$ROOT_DIR/disk/test/disk_info_sup_test.cpp",
    "$ROOT_DIR/ipc/src/storage_manager_client.cpp",
    "$ROOT_DIR/netlink/src/netlink_data.cpp",
    "$ROOT_DIR/volume/src/external_volume_info.cpp",
    "$ROOT_DIR/volume/src/process.cpp",
    "$ROOT_DIR/volume/src/volume_info.cpp",
    "$ROOT_DIR/volume/src/volume_manager.cpp",
  ]

  deps = [
    "$ROOT_DIR:storage_common_utils",
    "$ROOT_DIR:storage_daemon_header",
    "${storage_interface_path}/innerkits/storage_manager/native:storage_manager_header",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "storage_service:storage_manager_sa_proxy",
  ]
}

ohos_unittest("disk_config_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  module_out_path = "storage_service/storage_service/storage_daemon"

  defines = [
    "STORAGE_LOG_TAG = \"StorageDaemon\"",
    "LOG_DOMAIN = 0xD004301",
  ]

  include_dirs = [
    "$ROOT_DIR/disk/test",
    "$ROOT_DIR/include",
    "${storage_service_path}/utils/include",
    "${storage_manager_path}/include",
    "${storage_interface_path}/innerkits/storage_manager/native",
    "${storage_service_common_path}/include",
  ]

  sources = [
    "$ROOT_DIR/disk/src/disk_config.cpp",
    "$ROOT_DIR/disk/test/disk_config_test.cpp",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
  ]
}

group("storage_daemon_disk_test") {
  testonly = true
  deps = [
    ":disk_config_test",
    ":disk_info_sup_test",
    ":disk_info_test",
    ":disk_manager_test",
  ]
}
