# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("//foundation/filemanagement/storage_service/storage_service_aafwk.gni")

ohos_moduletest("AclTest") {
  module_out_path = "storage_service/storage_daemon"

  include_dirs = [ "../../include" ]

  sources = [
    "../src/acl.cpp",
    "acl_test.cpp",
  ]

  deps = [ "//third_party/googletest:gtest_main" ]

  external_deps = [ "c_utils:utils" ]
}

ohos_moduletest("SetAclTest") {
  module_out_path = "storage_service/storage_daemon"

  defines = [
    "STORAGE_LOG_TAG = \"StorageDaemon\"",
    "LOG_DOMAIN = 0xD004301",
  ]

  include_dirs = [
    "../../include",
    "../../../../interfaces/innerkits/acl/native",
    "${storage_service_common_path}/include",
  ]

  sources = [
    "../src/acl.cpp",
    "../src/setacl.cpp",
    "setacl_test.cpp",
  ]

  deps = [
    "${storage_daemon_path}:storage_common_utils",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
}

group("file_sharing_test") {
  testonly = true
  deps = [
    ":AclTest",
    ":SetAclTest",
  ]
}
