# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/test.gni")
import("//foundation/filemanagement/storage_service/storage_service_aafwk.gni")

ohos_moduletest("AclTest") {
  module_out_path = "storage_service/storage_service/storage_daemon"

  include_dirs = [ "${storage_daemon_path}/include" ]

  sources = [
    "${storage_daemon_path}/file_sharing/src/acl.cpp",
    "acl_test.cpp",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
  ]
}

ohos_moduletest("SetAclTest") {
  module_out_path = "storage_service/storage_service/storage_daemon"

  defines = [
    "STORAGE_LOG_TAG = \"StorageDaemon\"",
    "LOG_DOMAIN = 0xD004301",
  ]

  include_dirs = [
    "${storage_daemon_path}/include",
    "${storage_interface_path}/innerkits/acl/native",
    "${storage_service_common_path}/include",
  ]

  sources = [
    "${storage_daemon_path}/file_sharing/src/acl.cpp",
    "${storage_daemon_path}/file_sharing/src/setacl.cpp",
    "setacl_test.cpp",
  ]

  deps = [ "${storage_daemon_path}:storage_common_utils" ]

  external_deps = [
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
  ]
}

ohos_moduletest("FileSharingTest") {
  module_out_path = "storage_service/storage_service/storage_daemon"

  defines = [
    "STORAGE_LOG_TAG = \"StorageDaemon\"",
    "LOG_DOMAIN = 0xD004301",
  ]

  include_dirs = [
    "${storage_daemon_path}/file_sharing",
    "${storage_daemon_path}/include",
    "${storage_service_common_path}/include",
  ]

  sources = [
    "${storage_daemon_path}/file_sharing/src/acl.cpp",
    "${storage_daemon_path}/file_sharing/src/file_sharing.cpp",
    "${storage_daemon_path}/file_sharing/src/setacl.cpp",
    "filesharing_test.cpp",
  ]

  deps = [ "${storage_daemon_path}:storage_common_utils" ]

  external_deps = [
    "c_utils:utils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "init:libbegetutil",
  ]
}

group("file_sharing_test") {
  testonly = true
  deps = [
    ":AclTest",
    ":FileSharingTest",
    ":SetAclTest",
  ]
}
